HTML file skeleton

--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   <title>Sign-up form</title>
 </head>
 <body>
-  
+  <div class="flex-container">
+    <div class="sidebar">
+      <img src="images/Santa_Claus_black_transparent.svg" alt="santa" id="santa">
+      <h1 id="brand">Lanko</h1>
+    </div>
+
+    <main>
+      <p></p>
+      <p></p>
+      <form action="#" method="post">
+
+        <label for="f-name">First Name</label>
+        <input type="text" id="f-name">
+
+        <label for="l-name">Last Name</label>
+        <input type="text" id="l-name">
+
+        <label for="email">Email</label>
+        <input type="email" id="email">
+
+        <label for="number">Mobile Number</label>
+        <input type="tel" id="number">
+
+        <label for="pass">Password</label>
+        <input type="password" minlength="6" id="pass">
+
+        <label for="conf-pass">Confirm Password</label>
+        <input type="password" minlength="6" id="conf-pass">
+
+      </form>
+    </main>
+  </div>
 </body>
 </html>
