--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -10,10 +11,12 @@
 </head>
 <body>
   <div class="flex-container">
-    <div class="sidebar">
-      <img src="images/Santa_Claus_black_transparent.svg" alt="santa" id="santa">
-      <h1 id="brand">Lanko</h1>
-    </div>
+    <div class="sb">
+      <div class="img-overlay">
+        <img src="images/Santa_Claus_black_transparent.svg" alt="santa" id="santa">
+        <h1 id="brand">Lanko</h1>
+      </div> <!-- /img-overlay -->
+    </div> <!-- /sb -->
 
     <main>
       <p></p>
@@ -40,6 +43,6 @@
 
       </form>
     </main>
-  </div>
+  </div> <!-- /flex-container -->
 </body>
 </html>
