--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
     </div> <!-- /sb -->
 
     <main>
-      <p></p>
-      <p></p>
-      <form action="#" method="post">
-
-        <label for="f-name">First Name</label>
-        <input type="text" id="f-name">
-
-        <label for="l-name">Last Name</label>
-        <input type="text" id="l-name">
-
-        <label for="email">Email</label>
-        <input type="email" id="email">
-
-        <label for="number">Mobile Number</label>
-        <input type="tel" id="number">
-
-        <label for="pass">Password</label>
-        <input type="password" minlength="6" id="pass">
-
-        <label for="conf-pass">Confirm Password</label>
-        <input type="password" minlength="6" id="conf-pass">
-
-      </form>
+      <div class="main-container">
+        <p class="bold">This is not a real online service! You know you need something just like this in your life to help you realize your deepest dreams.<br>
+        You <em>know</em> you want to.</p>
+      </div> <!-- /main-container -->
+        <div class="form-container">
+          <p class="bold">Let's do this!</p>
+          <form action="#" method="post">
+            <label for="f-name">First Name</label>
+            <input type="text" id="f-name">
+            <label for="l-name">Last Name</label>
+            <input type="text" id="l-name">
+            <label for="email">Email</label>
+            <input type="email" id="email">
+            <label for="number">Mobile Number</label>
+            <input type="tel" id="number">
+            <label for="pass">Password</label>
+            <input type="password" minlength="6" id="pass">
+            <label for="conf-pass">Confirm Password</label>
+            <input type="password" minlength="6" id="conf-pass">
+          </form>
+        </div> <!-- /form-container-->
+        <div class="main-container">
+          <button>Create Account</button>
+          <p>Already have an account? <a href="#">Log in</a></p>
+        </div> <!-- /main-container-->
     </main>
   </div> <!-- /flex-container -->
 </body>
