--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script src="scripts.js" defer></script>
   <title>Sign-up form</title>
 </head>
 <body>
@@ -47,20 +48,20 @@
               <input type="tel" id="number" name="mobile-number" required>
             </div> <!-- /input-field-->
 
-            <div class="input-field">
+            <div id="pass-div" class="input-field">
               <label for="pass">Password</label>
               <input type="password" minlength="6" id="pass" name="password" required>
             </div> <!-- /input-field-->
 
-            <div class="input-field">
+            <div id="conf-pass-div" class="input-field">
               <label for="conf-pass">Confirm Password</label>
-              <input type="password" minlength="6" id="conf-pass" name="password" required>
+              <input type="password" minlength="6" id="conf-pass" name="conf-password" required>
             </div> <!-- /input-field-->
 
           </form>
         </div> <!-- /form-container-->
         <div class="btm-text">
-          <input class="btn" type="submit" form="register" value="Create Account">
+          <input id="create-account" class="btn" type="submit" form="register" value="Create Account">
           <p>Already have an account? <a href="#">Log in</a></p>
         </div> <!-- /main-container-->
     </main>
